--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
     "url": "git+https://github.com/neilburt/employee-tracker.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Neil Burt",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/neilburt/employee-tracker/issues"
   },
   "homepage": "https://github.com/neilburt/employee-tracker#readme",
   "dependencies": {
-    "console.table": "^0.10.0",
     "inquirer": "^8.1.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.2.5"
+    "mysql": "^2.18.1"
   }
 }
